<?xml version="1.0" encoding="utf-8"?>
<android.widget.AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--<TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TableRow>

        </TableRow>

    </TableLayout>-->

    <TextView
        android:id="@+id/textView925"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="114dp"
        android:layout_y="19dp"
        android:text="Lunch"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView1025"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="25dp"
        android:layout_y="110dp"
        android:text="@string/Misr"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="25dp"
        android:layout_y="155dp"
        android:text="@string/keywet"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="25dp"
        android:layout_y="200dp"
        android:text="@string/tegabino"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="25dp"
        android:layout_y="245dp"
        android:text="@string/mekoreni"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="25dp"
        android:layout_y="290dp"
        android:text="@string/timatim"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="25dp"
        android:layout_y="335dp"
        android:text="@string/beyaynet"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_x="283dp"
        android:layout_y="103dp"
        android:contentDescription="@string/Misr"
        android:spinnerMode="dropdown" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_x="283dp"
        android:layout_y="148dp"
        android:contentDescription="@string/keywet"
        android:spinnerMode="dropdown" />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_x="283dp"
        android:layout_y="193dp"
        android:contentDescription="@string/tegabino"
        android:spinnerMode="dropdown" />

    <Spinner
        android:id="@+id/spinner4"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_x="283dp"
        android:layout_y="238dp"
        android:contentDescription="@string/mekoreni"
        android:spinnerMode="dropdown" />

    <Spinner
        android:id="@+id/spinner5"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_x="283dp"
        android:layout_y="283dp"
        android:contentDescription="@string/timatim"
        android:spinnerMode="dropdown" />

    <Spinner
        android:id="@+id/spinner6"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_x="283dp"
        android:layout_y="328dp"
        android:contentDescription="@string/beyaynet"
        android:spinnerMode="dropdown" />


    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="175dp"
        android:layout_y="110dp"
        android:text="40" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="175dp"
        android:layout_y="155dp"
        android:text="65" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="175dp"
        android:layout_y="200dp"
        android:text="40" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="175dp"
        android:layout_y="245dp"
        android:text="30" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="175dp"
        android:layout_y="290dp"
        android:text="38" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="175dp"
        android:layout_y="335dp"
        android:text="50" />

    <Button
        android:id="@+id/btnoklunch"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="145dp"
        android:layout_y="516dp"
        android:text="Ok" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="25dp"
        android:layout_y="66dp"
        android:text="Name"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="175dp"
        android:layout_y="66dp"
        android:text="Price"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="283dp"
        android:layout_y="62dp"
        android:text="Quantity"
        android:textStyle="bold" />
</android.widget.AbsoluteLayout>
